--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
+	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet" type='text/css'>
     <!-- Theme CSS -->
     <link href="css/agency.css" rel="stylesheet">
+
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-85366595-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,7 +66,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Why Us?</a>
+                        <a class="page-scroll" href="#services">Why Me?</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Services</a>
@@ -65,10 +76,7 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="https://www.paypal.com/home">Prepay Online</a>
-                    </li>                  
+                    </li>       
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -80,8 +88,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Proudly Serving the Puget Sound for 10 Years</div>
-                <div class="intro-heading">Professional Seattle Harp Player</div>
+                <div class="intro-lead-in">Proudly Serving the Pacific Northwest</div>
+                <div class="intro-heading">Seattle Harpist</div>
                 <a href="#contact" class="page-scroll btn btn-xl">Contact Me</a>
             </div>
         </div>
@@ -92,18 +100,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Why Us?</h2>
-                    <h3 class="section-subheading text-muted">We provide, bar none, the best musical services in Puget Sound.</h3>
+                    <h2 class="section-heading">Why Me?</h2>
+                    <h3 class="section-subheading text-muted">I provide, bar none, the best musical services in the Pacific Northwest.</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-money fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-smile-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Affordable</h4>
-                    <p class="text-muted">Thanks to my wonderful clients, I have an extensive referral base around the Puget Sound. As such, I'm able to pass the savings on to you, with pricing on average 20% less than other leading Seattle harp players and musicians.</p>
+                    <h4 class="service-heading">Convenient</h4>
+                    <p class="text-muted">Booking me to perform at your wedding or event is a simple, straightforward process.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -111,7 +119,7 @@
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Professional</h4>
-                    <p class="text-muted">I've worked on almost every event you can imagine, but I specialize in weddings and family gatherings. I know a variety of musical styles, all of which are at your disposal.</p>
+                    <p class="text-muted">I have performed at world class venues across the globe. My stunning repertoire, gorgeous harp, and immaculate presentation are sure to impress!.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -119,7 +127,7 @@
                         <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Passionate</h4>
-                    <p class="text-muted">I love what I do. I am flexible and would love to work with you to make your event unforgettable. I take multiple forms of payment (online and off), I also provide voice and piano lessons for students of all ages and interest levels. </p>
+                    <p class="text-muted">I love what I do. I am flexible and would love to work with you to make your event unforgettable.</p>
                 </div>
             </div>
         </div>
@@ -174,7 +182,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Events</h4>
-                        <p class="text-muted">Let Me Help You</p>
+                        <p class="text-muted">Add a Classy Touch</p>
                     </div>
                 </div>
             </div>
@@ -184,80 +192,11 @@
     <!-- About Section -->
     <section id="about">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Learn a little about me!</h3>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">I Start My Practice</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">I Start Teaching</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">I Work on Major Events</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Your
-                                <br>Next
-                                    <br>Event!
-                                    </h4>
-                            </div>
-                        </li>
-                    </ul>
+                    <h2 class="intro-text text-center">About Me</h2>
+                    <p>Music is my lifelong passion. I began studying harp, piano, and voice at six and first performed professionally at eleven. I have performed extensively both domestically and abroad. Notable venues include The Edgewater Hotel in Seattle, the Avalon Theater in Hollywood, and the Kahala Resort in Honolulu - and I have been hired by celebrities such as Larry King, Adam Sandler, and Elton John.</p> 
+
+                    <p> Recently I have traveled as the principal harpist aboard Cunard's luxury cruise ship <i> The Queen Elizabeth</i>. I toured Scandanavia and the Mediterranean while entertaining cruise passengers as a solo artist and as part as the onboard orchestra. Currently I teach harp, piano, and voice in the Seattle area, and perform for weddings and events.</p>
                 </div>
             </div>
         </div>
@@ -317,6 +256,7 @@
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li><a href="https://www.facebook.com/Elizabeth-Joy-Music-249213418457672/"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.youtube.com/user/HarpistElizabethJoy"><i class="fa fa-youtube"></i></a>
                     </ul>
                 </div>
     <!-- Portfolio Modals -->
@@ -338,16 +278,19 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Lessons</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item-intro text-muted">"I would teach children music, physics, and philosophy; but most importantly music, for the patterns in music and all the arts are the keys to learning." - Plato</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/lessons-large.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>I offer private instruction for harp, piano, and voice in the Seattle/Eastside area. All ages and experience levels are welcome. I teach in-home, meaning that I travel to you for lessons for your convenience. Please email for rates and availability.</p>
                                 <p>
-                                    <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-                                <ul class="list-inline">
-                                    <li>Date: July 2014</li>
-                                    <li>Client: Round Icons</li>
-                                    <li>Category: Graphic Design</li>
-                                </ul>
+                                   <strong>Reviews</strong>
+                                <p>
+                                   "Elizabeth Joy is a wonderful, enthusiastic piano teacher for my spunky daughter. I love how she lets Layla be herself at the piano, letting her try a variety of songs and styles." <i>-Nikki S.</i>
+                                <p>
+                                   "Elizabeth is a fabulous teacher! She has such great rapport with my daughter who just turned 6. We are so happy with how quickly she has progressed, and grateful to Elizabeth for instilling her with such a great passion for music." <i>-Shirley A.</i>
+                                <p>
+                                	"Elizabeth is an excellent piano and voice teacher. My daughters love learning how to play piano and sing with her. She is very skilled in her teaching." <i>-Aimee D.</i>
+                                <p>
+                                <p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                             </div>
                         </div>
@@ -372,10 +315,14 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <h2>Weddings</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item-intro text-muted">"The best thing to hold on to in life is each other." -Audrey Hepburn</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/weddings-large.jpg" alt="">
-                                <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                                <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
+                                <p>Harp Music adds an elegant, romantic touch to weddings. Make your special day extraordinary with harp music for your ceremony, reception, or cocktail hour! Packages available. Please email for details.</p>
+                                <p><strong>Reviews</strong></p>
+                                <p>"Elizabeth did a beautiful job performing harp at our wedding. She was able to learn a song we requested specifically for this occasion and everyone was delighted!" -Hanna W.</p>
+                                <p>"The harp was so dreamy and romantic to listen to! It was perfect for our wedding day!" - Kayla D.</p>
+                                <p>"I wasn't sure at first when my wife told me a harp was going to be at the wedding, but WOW! I really thought it brought an air of elegance to our big day! Highly recommended!" -James K.
+                                <p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                             </div>
                         </div>
@@ -401,13 +348,29 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Events</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item-intro text-muted">"Good fortune is what happens when oppurtunity meets with planning" -Thomas Edison</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/events-large.jpg" alt="">
-                                <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
-                            </div>
-                        </div>
+<P><strong>Harp music is versatile and adds a classy touch to a variety of events! Please email me for rates and availability.</strong></P>
+<div style="width: 25%; margin-left: auto; margin-right: auto;">
+
+    <ul>
+    <p><strong>Occasions include:</strong><p>
+        <li>Holiday Parties</li>
+        <li>Birthday Parties</li>
+        <li>Sunday Brunch</li>
+
+        <li>Happy Hour</li>
+        <li>Memorial Services</li>
+        <li>Senior Home Events</li>
+        <li>Bridal Showers</li>
+
+    </ul>
+</div>
+
+<p>"Elizabeth is so talented and her interaction with the audience is superb." <i>-MBK Senior Living</i></p>
+<p>"We love having your harp music at our wine tastings. Our guests enjoy your talent." <i>-Rocky Pond Winery</i></p>
+<p>"The harp added a joyful, cheerful ambiance at our company's Christmas party. Everyone enjoyed it!" - <i>Microsoft Executive Briefing Center</i></p>
+<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                     </div>
                 </div>
             </div>
