--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Why Me?</h2>
-                    <h3 class="section-subheading text-muted">I provide, bar none, the best musical services in the Pacific Northwest.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -139,7 +138,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Take a look at what we offer.</h3>
                 </div>
             </div>
             <div class="row">
@@ -194,9 +192,8 @@
         <div class="container">
                 <div class="col-lg-12">
                     <h2 class="intro-text text-center">About Me</h2>
-                    <p>Music is my lifelong passion. I began studying harp, piano, and voice at six and first performed professionally at eleven. I have performed extensively both domestically and abroad. Notable venues include The Edgewater Hotel in Seattle, the Avalon Theater in Hollywood, and the Kahala Resort in Honolulu - and I have been hired by celebrities such as Larry King, Adam Sandler, and Elton John.</p> 
-
-                    <p> Recently I have traveled as the principal harpist aboard Cunard's luxury cruise ship <i> The Queen Elizabeth</i>. I toured Scandanavia and the Mediterranean while entertaining cruise passengers as a solo artist and as part as the onboard orchestra. Currently I teach harp, piano, and voice in the Seattle area, and perform for weddings and events.</p>
+                    <p class="text-justify">Music is my lifelong passion. I began studying harp, piano, and voice at six and first performed professionally at eleven. I have performed extensively both domestically and abroad. Notable venues include The Edgewater Hotel in Seattle, the Avalon Theater in Hollywood, and the Kahala Resort in Honolulu - and I have been hired by celebrities such as Larry King, Adam Sandler, and Elton John.</p> 
+                    <p class="text-justify"> Recently I have traveled as the principal harpist aboard Cunard's luxury cruise ship <i> The Queen Elizabeth</i>. I toured Scandanavia and the Mediterranean while entertaining cruise passengers as a solo artist and as part as the onboard orchestra. Currently I teach harp, piano, and voice in the Seattle area, and perform for weddings and events.</p>
                 </div>
             </div>
         </div>
