--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <!-- About Section -->
     <section id="about">
         <div class="container">
-                <div class="col-lg-12">
+                <div class="col-lg-12, about-block">
                     <h2 class="intro-text text-center">About Me</h2>
                     <p class="text-block">Music is my lifelong passion. I began studying harp, piano, and voice at six and first performed professionally at eleven. I have performed extensively both domestically and abroad. Notable venues include The Edgewater Hotel in Seattle, the Avalon Theater in Hollywood, and the Kahala Resort in Honolulu - and I have been hired by celebrities such as Larry King, Adam Sandler, and Elton John.</p> 
                     <p class="text-block"> Recently I have traveled as the principal harpist aboard Cunard's luxury cruise ship <i> The Queen Elizabeth</i>. I toured Scandanavia and the Mediterranean while entertaining cruise passengers as a solo artist and as part as the onboard orchestra. Currently I teach harp, piano, and voice in the Seattle area, and perform for weddings and events.</p>
