--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading, heading-space">Why Me?</h2>
+                    <h2 class="section-heading">Why Me?</h2>
                 </div>
             </div>
             <div class="row text-center">
