--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Professional</h4>
-                    <p class="text-muted">I have performed at world class venues across the globe. My stunning repertoire, gorgeous harp, and immaculate presentation are sure to impress!.</p>
+                    <p class="text-muted">I have performed at world class venues across the globe. My stunning repertoire, harp, and presentation are sure to impress.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -192,8 +192,8 @@
         <div class="container">
                 <div class="col-lg-12, about-block">
                     <h2 class="intro-text text-center">About Me</h2>
-                    <p class="text-block">Music is my lifelong passion. I began studying harp, piano, and voice at six and first performed professionally at eleven. I have performed extensively both domestically and abroad. Notable venues include The Edgewater Hotel in Seattle, the Avalon Theater in Hollywood, and the Kahala Resort in Honolulu - and I have been hired by celebrities such as Larry King, Adam Sandler, and Elton John.</p> 
-                    <p class="text-block"> Recently I have traveled as the principal harpist aboard Cunard's luxury cruise ship <i> The Queen Elizabeth</i>. I toured Scandanavia and the Mediterranean while entertaining cruise passengers as a solo artist and as part as the onboard orchestra. Currently I teach harp, piano, and voice in the Seattle area, and perform for weddings and events.</p>
+                    <p class="text-block">Music is my lifelong passion. I began studying harp, piano, and voice at six and first performed professionally at eleven. I have performed extensively at notable venues including the Edgewater Hotel in Seattle, the Avalon Theater in Hollywood, and the Kahala Resort in Honolulu.</p> 
+                    <p class="text-block"> Recently I have traveled internationally as the principal harpist aboard Cunard's luxury cruise ship <i> The Queen Elizabeth</i>. I toured Scandanavia and the Mediterranean while entertaining cruise passengers as a solo artist and as part of the onboard orchestra. When I am not traveling or performing, I teach harp, piano, and voice. Passing on the gift of music to others, helping them achieve their goals and build self esteem is incredibly rewarding. </p>
                 </div>
             </div>
         </div>
@@ -277,15 +277,15 @@
                                 <h2>Lessons</h2>
                                 <p class="item-intro text-muted">"I would teach children music, physics, and philosophy; but most importantly music, for the patterns in music and all the arts are the keys to learning." - Plato</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/lessons-large.jpg" alt="">
-                                <p>I offer private instruction for harp, piano, and voice in the Seattle/Eastside area. All ages and experience levels are welcome. I teach in-home, meaning that I travel to you for lessons for your convenience. Please email for rates and availability.</p>
+                                <p>I offer private instruction for harp, piano, and voice in the East Seattle area. All ages and experience levels are welcome. I teach in-home, meaning that I travel to you for lessons for your convenience. Please email for rates and availability.</p>
                                 <p>
                                    <strong>Reviews</strong>
                                 <p>
-                                   "Elizabeth Joy is a wonderful, enthusiastic piano teacher for my spunky daughter. I love how she lets Layla be herself at the piano, letting her try a variety of songs and styles." <i>-Nikki S.</i>
+                                   "Elizabeth is an incredible teacher. Both of my girls take lessons from her, one in harp and the other in voice. She is a fun and patient teacher, catering to each student's learning style and ability. We highly recommend Elizabeth." <i>-Tiffany M.</i>
                                 <p>
-                                   "Elizabeth is a fabulous teacher! She has such great rapport with my daughter who just turned 6. We are so happy with how quickly she has progressed, and grateful to Elizabeth for instilling her with such a great passion for music." <i>-Shirley A.</i>
+                                   "Elizabeth is a fabulous teacher! She has such great rapport with my daughter who just turned 6. We are so happy with how quickly she has progressed and are grateful to Elizabeth for instilling such a great passion for music in our daughter." <i>-Shirley A.</i>
                                 <p>
-                                	"Elizabeth is an excellent piano and voice teacher. My daughters love learning how to play piano and sing with her. She is very skilled in her teaching." <i>-Aimee D.</i>
+                                	"Elizabeth has inspired my daughter to want to practice and learn the piano. She knows how to inspire kids to love music and teaches good technique and theory in the process!" <i>-Sandi P.</i>
                                 <p>
                                 <p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
@@ -345,7 +345,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Events</h2>
-                                <p class="item-intro text-muted">"Good fortune is what happens when oppurtunity meets with planning" -Thomas Edison</p>
+                                <p class="item-intro text-muted">"Good fortune is what happens when opportunity meets with planning" -Thomas Edison</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/events-large.jpg" alt="">
 <P><strong>Harp music is versatile and adds a classy touch to a variety of events! Please email me for rates and availability.</strong></P>
 <div style="width: 25%; margin-left: auto; margin-right: auto;">
@@ -353,10 +353,10 @@
     <ul>
     <p><strong>Occasions include:</strong><p>
         <li>Holiday Parties</li>
-        <li>Birthday Parties</li>
-        <li>Sunday Brunch</li>
+        <li>Receptions</li>
+        <li>Grand Openings</li>
 
-        <li>Happy Hour</li>
+        <li>Anniversary Parties</li>
         <li>Memorial Services</li>
         <li>Senior Home Events</li>
         <li>Bridal Showers</li>
@@ -366,7 +366,7 @@
 
 <p>"Elizabeth is so talented and her interaction with the audience is superb." <i>-MBK Senior Living</i></p>
 <p>"We love having your harp music at our wine tastings. Our guests enjoy your talent." <i>-Rocky Pond Winery</i></p>
-<p>"The harp added a joyful, cheerful ambiance at our company's Christmas party. Everyone enjoyed it!" - <i>Microsoft Executive Briefing Center</i></p>
+<p>"Our residents really enjoyed you and the harp. You have a great way of connecting with and engaging your audience, which is the most important thing I look for with our entertainers." - <i>Aegis Living of Bellevue</i></p>
 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                     </div>
                 </div>
