--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Passionate</h4>
-                    <p class="text-muted">I love what I do. I am flexible and would love to work with you to make your event unforgettable.</p>
+                    <p class="text-muted">I love what I do. I am flexible and would love to help make your event unforgettable.</p>
                 </div>
             </div>
         </div>
