--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                 <h2>Weddings</h2>
                                 <p class="item-intro text-muted">"The best thing to hold on to in life is each other." -Audrey Hepburn</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/weddings-large.jpg" alt="">
-                                <p>Harp Music adds an elegant, romantic touch to weddings. Make your special day extraordinary with harp music for your ceremony, reception, or cocktail hour! Packages available. Please email for details.</p>
+                                <p>Harp music adds an elegant, romantic touch to weddings. Make your special day extraordinary with harp music for your ceremony, reception, or cocktail hour! Packages available. Please email for details.</p>
                                 <p><strong>Reviews</strong></p>
                                 <p>"Elizabeth did a beautiful job performing harp at our wedding. She was able to learn a song we requested specifically for this occasion and everyone was delighted!" -Hanna W.</p>
                                 <p>"The harp was so dreamy and romantic to listen to! It was perfect for our wedding day!" - Kayla D.</p>
