--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                 <h2>Events</h2>
                                 <p class="item-intro text-muted">"Good fortune is what happens when opportunity meets with planning" -Thomas Edison</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/events-large.jpg" alt="">
-<P><strong>Harp music is versatile and adds a classy touch to a variety of events! Please email me for rates and availability.</strong></P>
+<P>Harp music is versatile and adds a classy touch to a variety of events! Please email me for rates and availability.</P>
 <div style="width: 25%; margin-left: auto; margin-right: auto;">
 
     <ul>
