--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
     <ul>
     <p><strong>Occasions include:</strong><p>
-        <li>Holiday Parties</li>
+        <p>Holiday Parties</p>
         <li>Receptions</li>
         <li>Grand Openings</li>
 
