--- a/index.html
+++ b/index.html
@@ -353,13 +353,13 @@
     <ul>
     <p><strong>Occasions include:</strong><p>
         <p>Holiday Parties</p>
-        <li>Receptions</li>
-        <li>Grand Openings</li>
+        <p>Receptions</p>
+        <p>Grand Openings</p>
 
-        <li>Anniversary Parties</li>
-        <li>Memorial Services</li>
-        <li>Senior Home Events</li>
-        <li>Bridal Showers</li>
+        <p>Anniversary Parties</p>
+        <p>Memorial Services</p>
+        <p>Senior Home Events</p>
+        <p>Bridal Showers</p>
 
     </ul>
 </div>
