--- a/index.html
+++ b/index.html
@@ -350,13 +350,13 @@
 <P>Harp music is versatile and adds a classy touch to a variety of events! Please email me for rates and availability.</P>
 <div style="width: 25%; margin-left: auto; margin-right: auto;">
     <p><strong>Occasions include:</strong><p>
-        <p class="portfolio-item">Holiday Parties</p>
-        <p class="portfolio-item">Receptions</p>
-        <p class="portfolio-item">Grand Openings</p>
-        <p class="portfolio-item">Anniversary Parties</p>
-        <p class="portfolio-item">Memorial Services</p>
-        <p class="portfolio-item">Senior Home Events</p>
-        <p class="portfolio-item">Bridal Showers</p>
+        <p class="occasion-item">Holiday Parties</p>
+        <p class="occasion-item">Receptions</p>
+        <p class="occasion-item">Grand Openings</p>
+        <p class="occasion-item">Anniversary Parties</p>
+        <p class="occasion-item">Memorial Services</p>
+        <p class="occasion-item">Senior Home Events</p>
+        <p class="occasion-item">Bridal Showers</p>
 </div>
 
 <p>"Elizabeth is so talented and her interaction with the audience is superb." <i>-MBK Senior Living</i></p>
