--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                 <h2>Events</h2>
                                 <p class="item-intro text-muted">"Good fortune is what happens when opportunity meets with planning" -Thomas Edison</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/events-large.jpg" alt="">
-<P>Harp music is versatile and adds a classy touch to a variety of events! Please email me for rates and availability.</P>
+<P>Harp music is versatile and adds a classy touch to a variety of events. Please email me for rates and availability.</P>
 <div style="width: 25%; margin-left: auto; margin-right: auto;">
     <p><strong>Occasions include:</strong><p>
         <div class="occasion-item">Holiday Parties</div>
@@ -357,6 +357,7 @@
         <div class="occasion-item">Memorial Services</div>
         <div class="occasion-item">Senior Home Events</div>
         <div class="occasion-item">Bridal Showers</div>
+	<div></div>
 </div>
 
 <p>"Elizabeth is so talented and her interaction with the audience is superb." <i>-MBK Senior Living</i></p>
