--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <div class="occasion-item">Memorial Services</div>
         <div class="occasion-item">Senior Home Events</div>
         <div class="occasion-item">Bridal Showers</div>
-	<div></div>
+	<div>&nbsp;</div>
 </div>
 
 <p>"Elizabeth is so talented and her interaction with the audience is superb." <i>-MBK Senior Living</i></p>
