--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                 <p><strong>Reviews</strong></p>
                                 <p>"Elizabeth did a beautiful job performing harp at our wedding. She was able to learn a song we requested specifically for this occasion and everyone was delighted!" -Hanna W.</p>
                                 <p>"The harp was so dreamy and romantic to listen to! It was perfect for our wedding day!" - Kayla D.</p>
-                                <p>"I wasn't sure at first when my wife told me a harp was going to be at the wedding, but WOW! I really thought it brought an air of elegance to our big day! Highly recommended!" -James K.
+                                <p>"I hired Elizabeth to surprise my wife with harp music on our wedding day. My bride loved it! I highly recommend Elizabeth." -James K.
                                 <p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                             </div>
