--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Elizabeth Joy - Professional Seattle Harp Player</title>
-	<meta name="description" content="Best in class Seattle Harp Player and Music Teacher serving Seattle, the Eastside, and the Puget Sound.">
-	<meta name="keywords" content="harp player,harp players,harpist,harp for weddings,wedding harp players,wedding harp player,Seattle harp player,Seattle harp players,reception harp player,bellevue harp,seattle harp,woodinville harp,bothell harp,kirkland harp,renton harp,shoreline harp,lynwood harp,washington harp,washington harp player,washington harp players">
+    <title>Elizabeth Joy Music- Seattle Harpist</title>
+	<meta name="description" content="Seattle harpist and music teacher serving the Pacific Northwest.">
+	<meta name="keywords" content="Seattle harpist,harpist Seattle, wedding music Seattle,reception harp,bellevue harp,seattle harp,woodinville harp,bothell harp,kirkland harp,renton harp,shoreline harp,lynnwood harp,washington harp,washington harpist,washington harpists">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
