--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Elizabeth Joy Music- Seattle Harpist</title>
 	<meta name="description" content="Seattle harpist and music teacher serving the Pacific Northwest.">
-	<meta name="keywords" content="Seattle harpist,harpist Seattle, wedding music Seattle,reception harp,bellevue harp,seattle harp,woodinville harp,bothell harp,kirkland harp,renton harp,shoreline harp,lynnwood harp,washington harp,washington harpist,washington harpists">
+	<meta name="keywords" content="Seattle harpist,harpist Seattle,wedding music Seattle,reception harp,bellevue harp,bellevue harpist,seattle harp,woodinville harp,bothell harp,kirkland harp,renton harp,shoreline harp,lynnwood harp,washington harp,washington harpist,washington harpists,funeral music">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
