--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope-itemtype="http://schema.org/LocalBusiness">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Elizabeth Joy Music- Seattle Harpist</title>
-	<meta name="description" content="Seattle harpist and music teacher serving the Pacific Northwest.">
-	<meta name="keywords" content="Seattle harpist,harpist Seattle,wedding music Seattle,reception harp,bellevue harp,bellevue harpist,seattle harp,woodinville harp,bothell harp,kirkland harp,renton harp,shoreline harp,lynnwood harp,washington harp,washington harpist,washington harpists,funeral music">
+    <meta name="author" content="Elizabeth Joy">
+    <title>Elizabeth Joy Music- Seattle Harpist providing music for weddings, events, and lessons.</title>
+	<meta name="description" content="Seattle and Bellevue harpist Elizabeth Joy plays weddings, events, and is a music teacher serving the Pacific Northwest.">
+	<meta name="keywords" content="Seattle harpist,wedding music,bellevue harp,seattle harp,kirkland harp,renton harp,funeral music,music lessons for children,music lessons,piano lessons,voice lessons,harp lessons">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
