--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Elizabeth Joy">
     <title>Elizabeth Joy Music- Seattle Harpist providing music for weddings, events, and lessons.</title>
 	<meta name="description" content="Seattle and Bellevue harpist Elizabeth Joy plays weddings, events, and is a music teacher serving the Pacific Northwest.">
-	<meta name="keywords" content="Seattle harpist,wedding music,bellevue harp,seattle harp,kirkland harp,renton harp,funeral music,music lessons for children,music lessons,piano lessons,voice lessons,harp lessons">
+	<meta name="keywords" content="Seattle harpist,seattle harpist,harpist,wedding music,bellevue harp,seattle harp,bellevue harpist,kirkland harp,renton harp,music lessons Seattle,harp lessons,Seattle piano lessons,voice lessons,Seattle harp lessons">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
